web/wp-content/themes/cncf-twenty-two/source/scss/components/_case-studies.scss
.case-studies {
	display: grid;
	grid-column-gap: $grid-column-gap;
	grid-row-gap: $grid-row-gap;
	grid-template-columns: 1fr;

	@media (min-width: 1000px) {
		grid-template-columns: repeat(2, minmax(400px, 1fr));
	}
}

.case-study-item {
	position: relative;
	overflow: hidden;
	border-radius: 10px;
	color: $white;
	min-height: 250px;
	@media (min-width: 600px) {
		min-height: 280px;
	}
	height: 100%;
	&__overlay {
		width: 100%;
		top: 0;
		bottom: 0;
		object-fit: cover;
		position: absolute;
		z-index: 2;
		border-radius: 10px;
		background-color: $black;
		opacity: 0.7;
		@media (min-width: 600px) {
			opacity: 0.8;
		}
	}
	&__bg-image {
		width: 100%;
		height: 100%;
		object-fit: cover;
		position: absolute;
		z-index: 1;
		top: 0;
		left: 0;
		border-radius: 10px;
	}
	&__content {
		position: relative;
		z-index: 2;
		padding: 20px;
		@media (min-width: 375px) {
			padding: 32px;
		}
		@media (min-width: 1000px) {
			padding: 20px 20px;
		}
		@media (min-width: 1200px) {
			padding: 36px 33px;
		}
		height: 100%;
		// grid layout.
		display: grid;
		grid-template-areas:
			'title'
			'hr'
			'stats'
			'description'
			'cta';
		grid-template-rows: auto auto auto 1fr;
		@media (min-width: 600px) {
			grid-column-gap: 40px;
			grid-template-areas:
				'title description'
				'hr description'
				'stats description'
				'stats description'
				'date cta';
			grid-template-columns: 6fr 5fr;
		}
		@media (min-width: 1000px) {
			grid-column-gap: 20px;
		}
		@media (min-width: 1200px) {
			grid-column-gap: 40px;
		}
	}
	&__title {
		grid-area: title;
		margin-bottom: 18px;
		line-height: 140%;
		a {
			color: $white;
		}
		a:hover {
			text-decoration: none;
		}
	}
	&__hr {
		grid-area: hr;
	}
	&__stats {
		grid-area: stats;
		margin-top: 20px;
		color: $tertiary-400;
	}
	&__stat-larger {
		font-size: 30px;
		line-height: 36px;
		font-weight: 700;
	}
	&__stat-default {
		display: block;
		font-weight: 700;
	}
	&__date-wrapper {
		grid-area: date;
		display: flex;
		flex-direction: column;
		height: 100%;
	}
	&__date {
		font-size: 12px;
		margin-top: auto;
		display: block;
	}
	&__description {
		grid-area: description;
		margin-top: 16px;
		font-size: 13px;
		letter-spacing: 0.02em;
		line-height: 150%;
		@media (min-width: 600px) {
			margin-top: 0;
			font-size: 16px;
		}
	}
	&__cta.wp-block-button__link {
		grid-area: cta;
		margin-top: 26px;
		@media (max-width: 599px) {
			align-self: end;
			width: fit-content;
			padding-left: 16px;
			padding-right: 16px;
		}
		@media (min-width: 600px) {
			align-self: end;
			margin-top: 0;
		}
		@media (min-width: 1000px) {
			font-size: 14px;
			padding-left: 10px;
			padding-right: 10px;
		}
		@media (min-width: 1200px) {
			font-size: 16px;
			padding-left: 20px;
			padding-right: 20px;
		}
	}
}

.case-study-single {
	.hero {
		overflow: hidden;
		position: relative;

		&__image {
			width: 100%;
			height: 100%;
			object-fit: cover;
			position: absolute;
			z-index: 1;
			top: 0;
			left: 0;
		}

		&__figure:after {
			content: '';
			display: block;
			position: absolute;
			top: 0;
			left: 0;
			width: 100%;
			height: 100%;
			z-index: 2;
			background-color: $black;
			opacity: 0.8;
		}

		&__text-overlay {
			position: relative;
			z-index: 2;
			padding-top: 60px;
			padding-bottom: 70px;
		}

		.parent-link {
			color: $white;
			margin-bottom: 20px;
			@media (min-width: 1200px) {
				margin-bottom: 40px;
			}
		}
	}

	.wp-block-lf-case-study-overview {
		.is-style-opening-paragraph {
			max-width: 700px;
		}
	}

	.case-study-overview {
		display: flex;
		flex-direction: column-reverse;
		@media (min-width: 1000px) {
			flex-direction: row;
		}

		// col1
		&__intro {
			@media (min-width: 1000px) {
				margin-right: 50px;
			}
			@media (min-width: 1200px) {
				margin-right: 100px;
			}
		}
		// col2
		&__meta {
			@media (min-width: 1000px) {
				width: 300px;
				flex-shrink: 0;
			}
			@media (min-width: 1200px) {
				width: 380px;
				flex-shrink: 0;
			}
		}
		&__logo {
			margin-top: 20px;
			@media (min-width: 1000px) {
				margin-top: 50px;
			}
			@media (min-width: 1200px) {
				margin-top: 100px;
			}
			width: min(50%, 300px);
			max-height: 150px;
			object-fit: contain;
			object-position: left center;
		}
		&__taxonomies {
			margin-top: 40px;
			padding: 30px 20px;
			background-color: $white;
			border-radius: 10px;
			filter: drop-shadow(0px 2px 5px rgba(0, 0, 0, 0.1));

			.row {
				display: flex;
				flex-direction: row;

				line-height: 150%;
			}
			.row:not(:last-child) {
				margin-bottom: 25px;
			}
			.col1 {
				font-weight: 700;
				flex-basis: 130px;
				flex-shrink: 0;
			}
		}
		&__projects {
			margin-top: 50px;
		}
		&__project-icons {
			display: flex;
			flex-direction: row;
			flex-wrap: wrap;
			gap: 30px;
			margin-top: 30px;
			@media (min-width: 1000px) {
				margin-top: 40px;
				margin-left: 10px;
			}
			@media (min-width: 1200px) {
				gap: 40px;
			}
		}
		&__project-link {
			display: flex;
			align-items: center;
			align-content: center;
			justify-content: center;
			width: 60px;
		}
		&__project-icon {
			height: 60px;
			width: auto;
			display: block;
			max-width: 60px;
		}
	}
}

.wp-block-lf-case-study-highlights {
	margin-top: 80px;
	margin-bottom: 60px;
	// By the numbers.
	.case-study-title {
		text-align: center;
		margin-bottom: 30px;
		@media (min-width: 1000px) {
			text-align: left;
			margin-bottom: 50px;
		}
	}

	.case-study-highlights {
		background: $white;
		border: 1px solid $gray-300;
		box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
		border-radius: 10px;
		grid-row-gap: 0;
		grid-column-gap: 0;
		@media (min-width: 600px) {
			grid-template-columns: 1fr;
		}
		@media (min-width: 1000px) {
			grid-template-columns: repeat(3, 1fr);
		}
		&__col {
			text-align: center;
			padding: 25px 30px;
			@media (max-width: 999px) {
				&:nth-child(1),
				&:nth-child(2) {
					border-bottom: 1px solid $gray-300;
				}
			}
			@media (min-width: 1000px) {
				padding: 50px 30px;
				&:nth-child(1),
				&:nth-child(2) {
					border-right: 1px solid $gray-300;
				}
			}
		}
		&__heading {
			margin-bottom: 30px;
			letter-spacing: 0.05em;
		}
		&__text {
			padding-left: 20px;
			padding-right: 20px;
			line-height: 140%;
		}
	}
}

.featured-case-studies {
	&__item {
		background: rgba(0, 0, 0, 0.25);
		border-radius: 10px;
		overflow: hidden;
		position: relative;
		@media (max-width: 799px) {
			&:not(:first-child) {
				display: none;
			}
		}
	}
	&__bg-image {
		width: 100%;
		height: 100%;
		object-fit: cover;
		position: absolute;
		z-index: 1;
		top: 0;
		left: 0;
		border-radius: 10px;
	}
	&__bg-figure:after {
		content: '';
		background: rgb(0, 0, 0);
		background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 0) 60%, rgba(255, 255, 255, 0) 100%),
			linear-gradient(0deg, rgba(0, 0, 0, 0.25) 0%, rgba(0, 0, 0, 0.25) 100%);
		background-size: cover;
		display: block;
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		z-index: 2;
		border-radius: 10px;
	}
	&__logo-figure {
		height: 100px;
		margin-top: 35px;
		margin-bottom: 25px;
	}
	&__logo {
		width: max(70%, 320px);
		max-height: 100px;
		height: auto;
		display: block;
	}
	&__text-overlay {
		position: relative;
		z-index: 3;
		padding: 24px;
		@media (min-width: 1200px) {
			padding: 32px 42px;
		}
	}
	&__description {
		margin-top: 15px;
		font-size: 16px;
		line-height: 150%;
		letter-spacing: 0.02em;
		color: $white;
		max-width: max(90%, 410px);
	}
	.author-category {
		color: $white;
	}
}

